# First-Flask-Web-App

./: .replit  Makefile  main.c  main.py  pyproject.toml
static/: aboutPage.js
static/JS/: about.js  aboutPage.js  home.js
static/css/: mainStyle.css  style.css
staticJS/JS/: home.js
templates/: BASETEMP.html  about.html  home.html  home.js  homePage.html  submit.html  userSetup.html
