[tool.poetry]
name = "portlyfoolhardyset"
version = "0.1.0"
description = ""
authors = ["GetStuffDone <t.targetytt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
