[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["GetStuffDone <t.targetytt@gmail.com>"]
description = ""
name = "First Flask Web App"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
